Fix WASM building & add IMGUI_STATIC option. Attempt No1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ option(BACKENDS_SDL3_ONLY "Only SDL3 backend" OFF)
 option(BACKENDS_NO_GRAPHICS "Disables all graphics backends" OFF)
 option(BACKENDS_NO_BASE "Disables all base backends" OFF)
 option(IMGUI_WCHAR32 "Build with ImWChar32" OFF)
+option(IMGUI_STATIC "Build as static lib" OFF)
 
 if (BACKENDS_GLFW_ONLY AND BACKENDS_SDL2_ONLY)
 	message(FATAL_ERROR "You cannot set both BACKENDS_GLFW_ONLY and BACKENDS_SDL2_ONLY")
@@ -109,6 +110,18 @@ elseif(ANDROID)
 	set(BACKENDS_WIN32 OFF)
 	set(BACKENDS_OPENGL2 OFF)
 	set(BACKENDS_VULKAN OFF) # Too complicated at the moment maybe adding it later.
+	set(BACKENDS_METAL OFF)
+	set(BACKENDS_OSX OFF)
+
+elseif(EMSCRIPTEN)
+	message("Configuring for WASM...") # TODO: Implement WASM backend after it'll be merged into ImGui & implement WebGPU
+	set(BACKENDS_D3D9 OFF)
+	set(BACKENDS_D3D10 OFF)
+	set(BACKENDS_D3D11 OFF)
+	set(BACKENDS_D3D12 OFF)
+	set(BACKENDS_WIN32 OFF)
+	set(BACKENDS_OPENGL2 OFF)
+	set(BACKENDS_VULKAN OFF)
 	set(BACKENDS_METAL OFF)
 	set(BACKENDS_OSX OFF)
 
@@ -242,7 +255,7 @@ endif()
 #opengl3
 if (BACKENDS_OPENGL3)
 	message("Backends OPENGL3: ON")
-	if (ANDROID)
+	if (ANDROID OR EMSCRIPTEN)
 		find_library(GLES_LIB GLESv3)
 		list(APPEND IMGUI_LIBRARIES EGL GLESv3)
 	else()
@@ -333,8 +346,12 @@ if (BACKENDS_SDL3)
 	list(APPEND IMGUI_LIBRARIES ${IMGUI_SDL3_LIBRARY})
 endif()
 
+if(IMGUI_STATIC)
+    add_library(cimgui_impl STATIC ${IMGUI_SOURCES} ${IMGUI_CORE_SOURCES})
+else()
+    add_library(cimgui_impl SHARED ${IMGUI_SOURCES} ${IMGUI_CORE_SOURCES})
+endif()
 
-add_library(cimgui_impl SHARED ${IMGUI_SOURCES} ${IMGUI_CORE_SOURCES})
 target_include_directories(cimgui_impl PUBLIC "imgui")
 target_include_directories(cimgui_impl PUBLIC "include")
 target_link_libraries(cimgui_impl PRIVATE ${IMGUI_LIBRARIES})
