Attempt No2: Harry Potter and the Unreadable Errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -360,31 +360,33 @@ if(DEFINED lib_name)
     set_target_properties(cimgui_impl PROPERTIES OUTPUT_NAME ${lib_name})
 endif()
 
-if(APPLE)
-	if(BACKENDS_SDL2)
-		add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND install_name_tool -change /opt/homebrew/opt/sdl2/lib/libSDL2-2.0.0.dylib @loader_path/libSDL2.dylib $<TARGET_FILE:cimgui_impl>)
-		add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND install_name_tool -change /usr/local/opt/sdl2/lib/libSDL2-2.0.0.dylib @loader_path/libSDL2.dylib $<TARGET_FILE:cimgui_impl>)
- 	endif(BACKENDS_SDL2)
-	if(BACKENDS_SDL3)
-	 	add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND install_name_tool -change /opt/homebrew/opt/sdl3/lib/libSDL3-3.0.0.dylib @loader_path/libSDL3.dylib $<TARGET_FILE:cimgui_impl>)
-	 	add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND install_name_tool -change /usr/local/opt/sdl3/lib/libSDL3-3.0.0.dylib @loader_path/libSDL3.dylib $<TARGET_FILE:cimgui_impl>)
-		add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND install_name_tool -change @rpath/libSDL3.0.dylib @loader_path/libSDL3.dylib $<TARGET_FILE:cimgui_impl>)
-  	endif(BACKENDS_SDL3)
-  	if(BACKENDS_GLFW)
-		add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND install_name_tool -change /opt/homebrew/opt/glfw/lib/libglfw.3.dylib @loader_path/libglfw.dylib $<TARGET_FILE:cimgui_impl>)
-		add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND install_name_tool -change /usr/local/opt/glfw/lib/libglfw.3.dylib @loader_path/libglfw.dylib $<TARGET_FILE:cimgui_impl>)
- 	endif(BACKENDS_GLFW)
-elseif(UNIX AND NOT APPLE)
-	set_target_properties(cimgui_impl PROPERTIES INSTALL_RPATH "\$ORIGIN" BUILD_WITH_INSTALL_RPATH TRUE)
- 	if(BACKENDS_SDL2)
- 		add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND patchelf --replace-needed libSDL2-2.0.so.0 libSDL2.so $<TARGET_FILE:cimgui_impl>)
-	endif(BACKENDS_SDL2)
-	if(BACKENDS_SDL3)
-		add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND patchelf --replace-needed libSDL3-3.0.so.0 libSDL3.so $<TARGET_FILE:cimgui_impl>)
-	endif(BACKENDS_SDL3)
- 	 if(BACKENDS_GLFW)
- 		add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND patchelf --replace-needed libglfw.so.3 libglfw.so $<TARGET_FILE:cimgui_impl>)
-	endif(BACKENDS_GLFW)
+if(NOT IMGUI_STATIC)
+	if(APPLE)
+		if(BACKENDS_SDL2)
+			add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND install_name_tool -change /opt/homebrew/opt/sdl2/lib/libSDL2-2.0.0.dylib @loader_path/libSDL2.dylib $<TARGET_FILE:cimgui_impl>)
+			add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND install_name_tool -change /usr/local/opt/sdl2/lib/libSDL2-2.0.0.dylib @loader_path/libSDL2.dylib $<TARGET_FILE:cimgui_impl>)
+	 	endif(BACKENDS_SDL2)
+		if(BACKENDS_SDL3)
+		 	add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND install_name_tool -change /opt/homebrew/opt/sdl3/lib/libSDL3-3.0.0.dylib @loader_path/libSDL3.dylib $<TARGET_FILE:cimgui_impl>)
+		 	add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND install_name_tool -change /usr/local/opt/sdl3/lib/libSDL3-3.0.0.dylib @loader_path/libSDL3.dylib $<TARGET_FILE:cimgui_impl>)
+			add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND install_name_tool -change @rpath/libSDL3.0.dylib @loader_path/libSDL3.dylib $<TARGET_FILE:cimgui_impl>)
+	  	endif(BACKENDS_SDL3)
+	  	if(BACKENDS_GLFW)
+			add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND install_name_tool -change /opt/homebrew/opt/glfw/lib/libglfw.3.dylib @loader_path/libglfw.dylib $<TARGET_FILE:cimgui_impl>)
+			add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND install_name_tool -change /usr/local/opt/glfw/lib/libglfw.3.dylib @loader_path/libglfw.dylib $<TARGET_FILE:cimgui_impl>)
+	 	endif(BACKENDS_GLFW)
+	elseif(UNIX AND NOT APPLE)
+		set_target_properties(cimgui_impl PROPERTIES INSTALL_RPATH "\$ORIGIN" BUILD_WITH_INSTALL_RPATH TRUE)
+	 	if(BACKENDS_SDL2)
+	 		add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND patchelf --replace-needed libSDL2-2.0.so.0 libSDL2.so $<TARGET_FILE:cimgui_impl>)
+		endif(BACKENDS_SDL2)
+		if(BACKENDS_SDL3)
+			add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND patchelf --replace-needed libSDL3-3.0.so.0 libSDL3.so $<TARGET_FILE:cimgui_impl>)
+		endif(BACKENDS_SDL3)
+	 	 if(BACKENDS_GLFW)
+	 		add_custom_command(TARGET cimgui_impl POST_BUILD COMMAND patchelf --replace-needed libglfw.so.3 libglfw.so $<TARGET_FILE:cimgui_impl>)
+		endif(BACKENDS_GLFW)
+	endif()
 endif()
 
 if (IMGUI_WCHAR32)
